<resources>
    <string name="app_name">Your daily quotes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_tags">All quotes</string>
    <string name="menu_quote">Quote</string>
    <string name="menu_search_quote">Search quote</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Log out</string>

    <string name="add_quote">Add quote</string>
    <string name="text_home2">Add your favourites quotes and get notifications with them every day</string>
    <string name="text_home1">This is</string>
</resources>