<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.yourdailyquotes.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_quote"
            app:destination="@id/nav_quote" />
        <action
            android:id="@+id/action_nav_home_to_nav_tags"
            app:destination="@id/nav_tags" />
    </fragment>

    <fragment
        android:id="@+id/nav_tags"
        android:name="com.example.yourdailyquotes.ui.tags.TagListFragment"
        android:label="@string/menu_tags"
        tools:layout="@layout/fragment_tags" />

    <fragment
        android:id="@+id/nav_quote"
        android:name="com.example.yourdailyquotes.ui.quote.QuoteFragment"
        android:label="@string/menu_quote"
        tools:layout="@layout/fragment_quote" />
</navigation>